# yasumi

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  yasumi.pyi
.github/workflows/: CI.yml
src/: lib.rs
tests/: test_yasumi.py
